@@ -111,6 +111,11 @@ Changes in backwards compatibility policy
   behavior you can call writer.commit()/close() immediately after you create it.
   (Shai Erera, Mike McCandless)
   
+* LUCENE-2316: Directory.fileLength contract was clarified - it returns the
+  actual file's length if the file exists, and throws FileNotFoundException
+  otherwise. Returning length=0 for a non-existent file is no longer allowed. If
+  you relied on that, make sure to catch the exception. (Shai Erera)
+  
 Changes in runtime behavior
 
 * LUCENE-1923: Made IndexReader.toString() produce something
